# egcas_maxima

./: CMakeLists.txt  egcas-maxima  egcas-maxima.patch  test.txt  version.txt  win_crosscompile.sh
